# iCar-ROS2-SmartCar

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  gradle.properties  settings.gradle.kts  灯光控制快速启动指南.md
app/: build.gradle.kts
app/src/androidTest/java/com/icar/musiccar/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: panel_background.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
docs/: AI检测设计文档.md  APP开发任务清单.md  APP接口文档.md  APP桥接协议.md  ROS2开发使用教程.md  YOLO模型部署.md  astra_camera_color_fix.md  node_manager.md  代码质量保证方案.md  使用手册.md  复杂巡检场景详细实施方案.md  小车对接方案.md  手机APP设计文档.md  拓展功能实施方案.md  提交规范与交付清单.md  测试报告.md  灯光控制使用手册.md  统一启动与测试指南.md  设计文档.md  课程总结与操作手册.md  需求分析报告.md  项目分工与任务清单.md  项目开发报告.md
docs/日报/: 7月6日-8日_三日工作日报.md  7月7日_上午工作总结.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
music_car/: README.md
music_car/android/: gradlew  settings.gradle.kts
music_car/android/app/: build.gradle.kts
music_car/android/app/src/main/: AndroidManifest.xml
music_car/ios/MusicCar/: AppConstants.swift
music_car/ios/MusicCar/Data/: DanceRoutines.swift
music_car/ios/MusicCar/Engine/: BeatEngine.swift  DanceEngine.swift
music_car/ios/MusicCar/Models/: DanceModels.swift
music_car/ios/MusicCar/Network/: AIChoreographer.swift  ApiClient.swift  StateSocket.swift
music_car/ios/MusicCar/UI/: MusicCarView.swift
scripts/: app_bridge_client.py  check_navigation_tf.sh  common_real_car.sh  docker_deploy.sh  run_full_system_smoke_test.sh  start_app_bridge_test.sh  start_app_runtime_on_jetson.sh  start_lidar_test.sh  start_mission_test.sh  start_navigation_test.sh  start_real_mapping_keyboard.sh  start_sim_keyboard.sh  start_vision_test.sh  test_node_manager_transitions.sh
src/car_app_bridge/: package.xml  setup.cfg  setup.py
src/car_app_bridge/android/network/: ApiClient.kt  StateWebSocket.kt
src/car_app_bridge/android/network/model/: CmdRequest.kt
src/car_app_bridge/android/ui/remote/: JoystickView.kt
src/car_app_bridge/android/viewmodel/: AppViewModel.kt
src/car_app_bridge/car_app_bridge/: app_server.py  control_lease.py  protocol.py
src/car_app_bridge/config/: app_bridge.yaml
src/car_app_bridge/launch/: app_bridge.launch.py
src/car_bringup/: package.xml  setup.cfg  setup.py
src/car_bringup/car_bringup/: __init__.py  cli_core.py  icar_cli.py  odom_tf_keepalive.py
src/car_bringup/config/: lidar.yaml  params.yaml
src/car_bringup/launch/: bringup.launch.py  node_manager.launch.py  runtime_profile.launch.py  vendor_x3_base_no_joy.launch.py
src/car_bringup/resource/: car_bringup
src/car_control/: package.xml  setup.cfg  setup.py
src/car_control/car_control/: __init__.py  keyboard_teleop.py  light_controller.py  motion_controller.py  safety_mux.py  safety_policy.py
src/car_control/config/: control.yaml
src/car_control/launch/: control.launch.py
src/car_inspection/: package.xml  setup.cfg  setup.py
src/car_inspection/car_inspection/: __init__.py  checkin_logic.py  checkpoint_verifier.py  evidence_store.py  image_capture.py  inspection_executor.py  inspection_schema.py  marker_protocol.py  qr_detector.py  vlm_client.py
src/car_inspection/config/: inspection.yaml
src/car_inspection/launch/: inspection.launch.py
src/car_interfaces/: CMakeLists.txt  package.xml
src/car_interfaces/action/: ExecutePatrol.action  RunInspection.action  VerifyCheckpoint.action
src/car_interfaces/msg/: InspectionResult.msg  MissionStatus.msg  PatrolEvent.msg  RuntimeStatus.msg
src/car_interfaces/srv/: MissionControl.srv  SetRuntimeProfile.srv
src/car_lidar/: package.xml  setup.cfg  setup.py
src/car_lidar/car_lidar/: __init__.py  avoidance.py  tracker.py  warning.py
src/car_lidar/config/: lidar.yaml
src/car_lidar/launch/: lidar.launch.py
src/car_lidar/resource/: car_lidar
src/car_map_manager/: package.xml  setup.cfg  setup.py
src/car_map_manager/car_map_manager/: __init__.py  map_repository.py
src/car_map_manager/resource/: car_map_manager
src/car_mission/: package.xml  setup.cfg  setup.py
src/car_mission/car_mission/: __init__.py  health_monitor.py  mission_manager.py  mission_repository.py  navigation_adapter.py  recovery_policy.py  report_exporter.py  route_repository.py  route_schema.py  state_machine.py
src/car_mission/config/: demo_checkin_route.yaml  demo_inspection_route.yaml  demo_route.yaml
src/car_mission/launch/: mission.launch.py
src/car_mission/resource/: car_mission
src/car_navigation/: package.xml  setup.cfg  setup.py
src/car_navigation/car_navigation/: __init__.py  delayed_nav2_autostart.py  goal_publisher.py  scan_filter.py  waypoint_patrol.py
src/car_navigation/config/: nav2_params.yaml  waypoints.yaml
src/car_navigation/launch/: mapping.launch.py  navigation.launch.py  patrol.launch.py
src/car_navigation/maps/: lab_map.pgm  lab_map.yaml
src/car_navigation/resource/: car_navigation
src/car_runtime_manager/: package.xml  setup.cfg  setup.py
src/car_runtime_manager/car_runtime_manager/: __init__.py  node_manager.py  runtime_core.py
src/car_runtime_manager/config/: node_manager.yaml
src/car_runtime_manager/resource/: car_runtime_manager
src/car_vision/: package.xml  requirements-vision.txt  setup.py
src/car_vision/car_vision/: camera_bridge.py  color_detector.py  color_tracker.py  defect_detector.py  line_follower.py  person_detector.py  yolo_detector.py
src/car_vision/config/: vision.yaml  vision_params.yaml
src/car_vision/launch/: vision.launch.py
tests/: test_app_bridge_client.py  test_app_protocol.py  test_bringup_cli.py  test_checkin_core.py  test_control_lease.py  test_foxy_compatibility.py  test_inspection_core.py  test_light_control.py  test_map_repository.py  test_mission_core.py  test_navigation_safety_contract.py  test_qr_yolo_crop.py  test_runtime_profile_core.py  test_safety_policy.py  test_yolo_model_registry.py
(+17 files in other folders)
