<?xml version="1.0"?>
<package format="3">
  <name>car_app_bridge</name>
  <version>0.1.0</version>
  <description>TCP command bridge from external apps to iCar ROS2 topics.</description>
  <maintainer email="team@example.com">iCar Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
