<?xml version="1.0"?>
<package format="3">
  <name>car_bringup</name>
  <version>0.1.0</version>
  <description>Bringup launch files for the iCar ROS2 smart car.</description>
  <maintainer email="team@example.com">iCar Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>car_control</exec_depend>
  <exec_depend>car_app_bridge</exec_depend>
  <exec_depend>car_lidar</exec_depend>
  <exec_depend>car_mission</exec_depend>
  <exec_depend>car_navigation</exec_depend>
  <exec_depend>car_vision</exec_depend>
  <exec_depend>icar_base_node</exec_depend>
  <exec_depend>icar_bringup</exec_depend>
  <exec_depend>icar_description</exec_depend>
  <exec_depend>imu_filter_madgwick</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>sllidar_ros2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>ydlidar_ros2_driver</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
