<?xml version="1.0"?>
<package format="3">
  <name>car_inspection</name>
  <version>0.1.0</version>
  <description>Checkpoint verification, marker detection, and evidence storage for iCar patrols.</description>
  <maintainer email="team@example.com">iCar Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>car_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
