<?xml version="1.0"?>
<package format="3">
  <name>car_navigation</name>
  <version>0.1.0</version>
  <description>Navigation helpers for the iCar ROS2 smart car.</description>
  <maintainer email="team@example.com">iCar Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
